@@ -4,6 +4,16 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES
 GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
+2007/02/01
+	* Merged hack protection against players specifying a many index beyond the
+	  max.
+	* Merged removal of config settings produce_item_name_input,
+	  produce_potion_name_input, making_arrow_name_input, holywater_name_input
+	  and cdp_name_input. These are all handled now through bitmasks using
+	  produce_item_name_input instead.
+	* Item skills and menu-based skills are now cleared on death.
+	* Merged setting the appropiate pvp packet and the pvp point count to 5
+	  when entering gvg dungeons.
 2007/01/31
 	* Merged the updated renaming code that handles both pets/homunculus,
 	  making them respect the allowed letters restrictions.
